--- a/main.html
+++ b/main.html
@@ -15,7 +15,9 @@
 		<lable for="email" class="required">Email</lable><br>
 		<input type="email" id="email" required><br><br>
 		<lable for="radio" class="required">Gender</lable><br>
-		<input type="radio"  gender="name" >male
+		<lable for="gender-m">Male</lable>
+		<input type="radio"  gender="name" >
+		<lable for="gender-f">Female</lable>
 		<input type="radio"  gender="name">female<br><br>
 		<label for="laptop" class="required">Laptop Brands:</label>
 
