--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 		<lable for="age" class="required">Age</lable>
 		<input type="Number" id="age" required><br><br>
 		<lable for="dob" class="required" >Date of Birth	</lable>
-		<input type="Date" id="dob" ><br><br>
+		<input type="Date" id="dob" required><br><br>
 		<lable for="password" class="required">Password</lable>
 		<input type="password" id="password" required><br><br>
 		<lable for="portfolio" class="required">Portfolio URL</lable>
