--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		<input type="email" id="email" required><br><br>
 		<lable for="radio" class="required">Gender</lable><br>
 		<lable for="gender-m">Male</lable>
-		<input type="radio"  gender="name" >
+		<input type="radio"  name="gender" >
 		<lable for="gender-f">Female</lable>
 		<input type="radio"  gender="name">female<br><br>
 		<label for="laptop" class="required">Laptop Brands:</label>
