--- a/main.html
+++ b/main.html
@@ -12,12 +12,12 @@
 	<form method='post'>
 		<label for="name" class="required">Name</label><br>
         <input type='text' id="name" required><br><br>
-		<lable for="email" class="required">Email</lable><br>
+		<label for="email" class="required">Email</label><br>
 		<input type="email" id="email" required><br><br>
-		<lable for="radio" class="required">Gender</lable><br>
-		<lable for="gender-m">Male</lable>
+		<label for="radio" class="required">Gender</label><br>
+		<label for="gender-m">Male</label>
 		<input type="radio"  name="gender" >
-		<lable for="gender-f">Female</lable>
+		<label for="gender-f">Female</label>
 		<input type="radio"  gender="name">female<br><br>
 		<label for="laptop" class="required">Laptop Brands:</label>
 
@@ -26,15 +26,15 @@
 			  <option value="Asus">Asus</option>
 			  <option value="HP">HP</option>
 		</select><br><br>
-		<lable for="age" class="required">Age</lable>
+		<label for="age" class="required">Age</label>
 		<input type="Number" id="age" required><br><br>
-		<lable for="dob" class="required" >Date of Birth	</lable>
+		<label for="dob" class="required" >Date of Birth	</label>
 		<input type="Date" id="dob" required><br><br>
-		<lable for="password" class="required">Password</lable>
+		<label for="password" class="required">Password</label>
 		<input type="password" id="password" required><br><br>
-		<lable for="portfolio" class="required">Portfolio URL</lable>
+		<label for="portfolio" class="required">Portfolio URL</label>
 		<input type="url" id="portfolio" ><br><br>
-		<lable for="submit button" class="required">Submit Button</lable>
+		<label for="submit button" class="required">Submit Button</label>
 		<button type="submit" form="nameform" value="Submit">Submit</button>
 		 
 	</form>
