--- a/main.html
+++ b/main.html
@@ -14,11 +14,11 @@
         <input type='text' id="name" required><br><br>
 		<label for="email" class="required">Email</label><br>
 		<input type="email" id="email" required><br><br>
-		<label for="radio" class="required">Gender</label><br>
-		<label for="gender-m">Male</label>
-		<input type="radio"  name="gender" >
-		<label for="gender-f">Female</label>
-		<input type="radio"  gender="name">female<br><br>
+		<label>Gender:</label>
+		<label for="gender_m">Male</label>
+		<input type="radio" id="gender_m" name="gender"  required>
+		<label for="gender_f">Femail</label>
+		<input type="radio" id="gender_f" name="gender" required><br><br>
 		<label for="laptop" class="required">Laptop Brands:</label>
 
 		<select name="Laptop Brands" id="laptop">
@@ -33,9 +33,8 @@
 		<label for="password" class="required">Password</label>
 		<input type="password" id="password" required><br><br>
 		<label for="portfolio" class="required">Portfolio URL</label>
-		<input type="url" id="portfolio" ><br><br>
-		<label for="submit button" class="required">Submit Button</label>
-		<button type="submit" form="nameform" value="Submit">Submit</button>
+		<input type="url" id="portfolio" required><br><br>
+		<button type="submit">Submit</button>
 		 
 	</form>
     <script type="text/javascript" src="./script.js">
